java 16, a few dep upgrades