@@ -10,7 +10,7 @@
 
   <groupId>com.impactupgrade</groupId>
   <artifactId>nucleus-parent</artifactId>
-  <version>1.0.20-SNAPSHOT</version>
+  <version>2.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>Nonprofit Nucleus: Parent</name>
@@ -41,8 +41,8 @@
     <version.log4j>2.14.1</version.log4j>
     <version.mail>1.6.2</version.mail>
     <version.spring>4.1.0.RELEASE</version.spring>
-    <version.stripe>20.47.1</version.stripe>
-    <version.twilio>8.11.0</version.twilio>
+    <version.stripe>20.66.0</version.stripe>
+    <version.twilio>8.17.0</version.twilio>
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -53,7 +53,7 @@
     <dependency>
       <groupId>com.sun.xml.ws</groupId>
       <artifactId>jaxws-rt</artifactId>
-      <version>3.0.0</version>
+      <version>3.0.1</version>
       <type>pom</type>
       <exclusions>
         <!-- Conflicts with what we're already using -->
@@ -66,7 +66,7 @@
     <dependency>
       <groupId>com.sun.xml.ws</groupId>
       <artifactId>rt</artifactId>
-      <version>3.0.0</version>
+      <version>3.0.1</version>
       <exclusions>
         <!-- Conflicts with what we're already using -->
         <exclusion>
@@ -148,12 +148,12 @@
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-core</artifactId>
-      <version>5.4.30.Final</version>
+      <version>5.5.4.Final</version>
     </dependency>
     <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
-      <version>42.2.19</version>
+      <version>42.2.23.jre7</version>
     </dependency>
 
     <!-- 3rd party SDKs -->
@@ -176,7 +176,7 @@
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
-      <version>2.8.6</version>
+      <version>2.8.7</version>
     </dependency>
     <dependency>
       <groupId>com.impactupgrade.integration</groupId>
@@ -231,7 +231,7 @@
     <dependency>
       <groupId>org.json</groupId>
       <artifactId>json</artifactId>
-      <version>20201115</version>
+      <version>20210307</version>
     </dependency>
     <!-- country code <-> country name conversions -->
     <dependency>
@@ -251,19 +251,19 @@
     <dependency>
       <groupId>org.jruby</groupId>
       <artifactId>jruby</artifactId>
-      <version>9.2.11.1</version>
+      <version>9.2.19.0</version>
     </dependency>
 
     <!-- for storing any file backups -->
     <dependency>
       <groupId>com.backblaze.b2</groupId>
       <artifactId>b2-sdk-core</artifactId>
-      <version>3.1.0</version>
+      <version>5.0.0</version>
     </dependency>
     <dependency>
       <groupId>com.backblaze.b2</groupId>
       <artifactId>b2-sdk-httpclient</artifactId>
-      <version>3.1.0</version>
+      <version>5.0.0</version>
     </dependency>
 
     <!-- logging -->
@@ -289,13 +289,13 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
-      <version>5.7.0</version>
+      <version>5.7.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-junit-jupiter</artifactId>
-      <version>3.7.0</version>
+      <version>3.11.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -321,9 +321,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
-          <source>15</source>
-          <target>15</target>
-          <compilerArgs>--enable-preview</compilerArgs>
+          <source>16</source>
+          <target>16</target>
         </configuration>
       </plugin>
       <plugin>
@@ -331,7 +330,6 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.22.2</version>
         <configuration>
-          <argLine>--enable-preview</argLine>
         </configuration>
       </plugin>
       <plugin>
@@ -347,8 +345,7 @@
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>3.2.0</version>
         <configuration>
-          <release>15</release>
-          <additionalOptions>--enable-preview</additionalOptions>
+          <release>16</release>
         </configuration>
       </plugin>
 
